# Naughtiness

./: .gitignore  Cargo.toml  README.md
compiler/nagi/: Cargo.toml
compiler/nagi/src/: main.rs
compiler/nagi_anti_cheat/: Cargo.toml
compiler/nagi_checker/: Cargo.toml
compiler/nagi_checker/src/: lib.rs  semantic_analyzer.rs  type_checker.rs
compiler/nagi_command_option/: Cargo.toml
compiler/nagi_command_option/src/: lib.rs
compiler/nagi_cst/: Cargo.toml
compiler/nagi_cst/src/: cst.rs  expression.rs  lib.rs  token.rs
compiler/nagi_driver/: Cargo.toml
compiler/nagi_driver/src/: lib.rs
compiler/nagi_errors/: Cargo.toml
compiler/nagi_errors/src/: lib.rs
compiler/nagi_extender/: Cargo.toml
compiler/nagi_extender/src/: lib.rs
compiler/nagi_ir/: Cargo.toml
compiler/nagi_lexer/: Cargo.toml
compiler/nagi_lexer/src/: lexer.rs  lib.rs  tests.rs
compiler/nagi_macros/: Cargo.toml
compiler/nagi_macros/src/: keyword.rs
compiler/nagi_parse/: Cargo.toml  test.json
compiler/nagi_parse/src/: ast_parse.rs  cst_parse.rs  expression.rs  lexer.rs  lib.rs  parser.rs  tests.rs
compiler/nagi_parse/src/ast_parse/: ast_parser.rs
compiler/nagi_parse/src/cst_parse/: cst_parser.rs  expression.rs  lexer.rs
compiler/nagi_syntax_tree/: Cargo.toml
compiler/nagi_syntax_tree/src/: ast.rs  cst.rs  hst.rs  keywords.rs  lib.rs  token.rs
src/compile/lexer/src/: identifier.rs  lexer.rs  tests.rs
